--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
 mobile/Glow/frameworks/js-bindings/
+mobile/Glow/frameworks/runtime-src/proj.android/assets
+mobile/Glow/frameworks/runtime-src/proj.android/obj
